Fix phone number type, input spacing, map rotation and logo

--- a/src/App.css
+++ b/src/App.css
@@ -299,3 +299,9 @@ button.gm-ui-hover-effect {
     display: none;
   }
 }
+
+@media only screen and (max-width: 834px) {
+  .headerImage {
+    max-width: 60%;
+  }
+}
